Motif_Athena_Package/include_C/Xlib.h


typedef struct {
	int family;		
	int length;		
	char *address;		
} XHostAddress;
typedef struct _XImage {
    int width, height;		
    int xoffset;		
    int format;			
    char *data;			
    int byte_order;		
    int bitmap_unit;		
    int bitmap_bit_order;	
    int bitmap_pad;		
    int depth;			
    int bytes_per_line;		
    int bits_per_pixel;		
    unsigned long red_mask;	
    unsigned long green_mask;
    unsigned long blue_mask;
    XPointer obdata;		
    struct funcs {		
	struct _XImage *(*create_image)(
		struct _XDisplay* ,
		Visual*		,
		unsigned int	,
		int		,
		int		,
		char*		,
		unsigned int	,
		unsigned int	,
		int		,
		int		);
	int (*destroy_image)        (struct _XImage *);
	unsigned long (*get_pixel)  (struct _XImage *, int, int);
	int (*put_pixel)            (struct _XImage *, int, int, unsigned long);
	struct _XImage *(*sub_image)(struct _XImage *, int, int, unsigned int, unsigned int);
	int (*add_pixel)            (struct _XImage *, long);
	} f;
} XImage;
typedef struct {
	unsigned long pixel;
	unsigned short red, green, blue;
	char flags;  
	char pad;
} XColor;
typedef struct {
    short x, y;
    unsigned short width, height;
} XRectangle;
typedef struct {
 	int max_keypermod;	
 	KeyCode *modifiermap;	
} XModifierKeymap;
typedef struct _XDisplay Display;
typedef struct {
	int type;
	unsigned long serial;	
	Bool send_event;	
	Display *display;	
	Window window;		
	int request;		
	int first_keycode;	
	int count;		
} XMappingEvent;
typedef union _XEvent {
        int type;		
	XAnyEvent xany;
	XKeyEvent xkey;
	XButtonEvent xbutton;
	XMotionEvent xmotion;
	XCrossingEvent xcrossing;
	XFocusChangeEvent xfocus;
	XExposeEvent xexpose;
	XGraphicsExposeEvent xgraphicsexpose;
	XNoExposeEvent xnoexpose;
	XVisibilityEvent xvisibility;
	XCreateWindowEvent xcreatewindow;
	XDestroyWindowEvent xdestroywindow;
	XUnmapEvent xunmap;
	XMapEvent xmap;
	XMapRequestEvent xmaprequest;
	XReparentEvent xreparent;
	XConfigureEvent xconfigure;
	XGravityEvent xgravity;
	XResizeRequestEvent xresizerequest;
	XConfigureRequestEvent xconfigurerequest;
	XCirculateEvent xcirculate;
	XCirculateRequestEvent xcirculaterequest;
	XPropertyEvent xproperty;
	XSelectionClearEvent xselectionclear;
	XSelectionRequestEvent xselectionrequest;
	XSelectionEvent xselection;
	XColormapEvent xcolormap;
	XClientMessageEvent xclient;
	XMappingEvent xmapping;
	XErrorEvent xerror;
	XKeymapEvent xkeymap;
	XGenericEvent xgeneric;
	XGenericEventCookie xcookie;
	long pad[24];
} XEvent;
typedef struct {
    short	lbearing;	
    short	rbearing;	
    short	width;		
    short	ascent;		
    short	descent;	
    unsigned short attributes;	
} XCharStruct;
typedef struct {		
    unsigned char byte1;
    unsigned char byte2;
} XChar2b;
extern int XPutBackEvent(
    Display*		,
    XEvent*		
);
extern int XPutImage(
    Display*		,
    Drawable		,
    GC			,
    XImage*		,
    int			,
    int			,
    int			,
    int			,
    unsigned int	,
    unsigned int	
);
extern int XQLength(
    Display*		
);
extern Status XQueryBestCursor(
    Display*		,
    Drawable		,
    unsigned int        ,
    unsigned int	,
    unsigned int*	,
    unsigned int*	
);
extern Status XQueryBestSize(
    Display*		,
    int			,
    Drawable		,
    unsigned int	,
    unsigned int	,
    unsigned int*	,
    unsigned int*	
);
extern Status XQueryBestStipple(
    Display*		,
    Drawable		,
    unsigned int	,
    unsigned int	,
    unsigned int*	,
    unsigned int*	
);
extern Status XQueryBestTile(
    Display*		,
    Drawable		,
    unsigned int	,
    unsigned int	,
    unsigned int*	,
    unsigned int*	
);
extern int XQueryColor(
    Display*		,
    Colormap		,
    XColor*		
);
extern int XQueryColors(
    Display*		,
    Colormap		,
    XColor*		,
    int			
);
extern Bool XQueryExtension(
    Display*		,
     char*	,
    int*		,
    int*		,
    int*		
);
extern int XQueryKeymap(
    Display*		,
    char [32]		
);
extern Bool XQueryPointer(
    Display*		,
    Window		,
    Window*		,
    Window*		,
    int*		,
    int*		,
    int*		,
    int*		,
    unsigned int*       
);
extern int XQueryTextExtents(
    Display*		,
    XID			,
     char*	,
    int			,
    int*		,
    int*		,
    int*		,
    XCharStruct*	
);
extern int XQueryTextExtents16(
    Display*		,
    XID			,
     XChar2b*	,
    int			,
    int*		,
    int*		,
    int*		,
    XCharStruct*	
);
extern Status XQueryTree(
    Display*		,
    Window		,
    Window*		,
    Window*		,
    Window**		,
    unsigned int*	
);
extern int XRaiseWindow(
    Display*		,
    Window		
);
extern int XReadBitmapFile(
    Display*		,
    Drawable 		,
     char*	,
    unsigned int*	,
    unsigned int*	,
    Pixmap*		,
    int*		,
    int*		
);
extern int XReadBitmapFileData(
     char*	,
    unsigned int*	,
    unsigned int*	,
    unsigned char**	,
    int*		,
    int*		
);
extern int XRebindKeysym(
    Display*		,
    KeySym		,
    KeySym*		,
    int			,
     unsigned char*	,
    int			
);
extern int XRecolorCursor(
    Display*		,
    Cursor		,
    XColor*		,
    XColor*		
);
extern int XRefreshKeyboardMapping(
    XMappingEvent*	
);
extern int XRemoveFromSaveSet(
    Display*		,
    Window		
);
extern int XRemoveHost(
    Display*		,
    XHostAddress*	
);
extern int XRemoveHosts(
    Display*		,
    XHostAddress*	,
    int			
);
extern int XReparentWindow(
    Display*		,
    Window		,
    Window		,
    int			,
    int			
);
extern int XResetScreenSaver(
    Display*		
);
extern int XResizeWindow(
    Display*		,
    Window		,
    unsigned int	,
    unsigned int	
);
extern int XRestackWindows(
    Display*		,
    Window*		,
    int			
);
extern int XRotateBuffers(
    Display*		,
    int			
);
extern int XRotateWindowProperties(
    Display*		,
    Window		,
    Atom*		,
    int			,
    int			
);
extern int XScreenCount(
    Display*		
);
extern int XSelectInput(
    Display*		,
    Window		,
    long		
);
extern Status XSendEvent(
    Display*		,
    Window		,
    Bool		,
    long		,
    XEvent*		
);
extern int XSetAccessControl(
    Display*		,
    int			
);
extern int XSetArcMode(
    Display*		,
    GC			,
    int			
);
extern int XSetBackground(
    Display*		,
    GC			,
    unsigned long	
);
extern int XSetClipMask(
    Display*		,
    GC			,
    Pixmap		
);
extern int XSetClipOrigin(
    Display*		,
    GC			,
    int			,
    int			
);
extern int XSetClipRectangles(
    Display*		,
    GC			,
    int			,
    int			,
    XRectangle*		,
    int			,
    int			
);
extern int XSetCloseDownMode(
    Display*		,
    int			
);
extern int XSetCommand(
    Display*		,
    Window		,
    char**		,
    int			
);
extern int XSetDashes(
    Display*		,
    GC			,
    int			,
     char*	,
    int			
);
extern int XSetFillRule(
    Display*		,
    GC			,
    int			
);
extern int XSetFillStyle(
    Display*		,
    GC			,
    int			
);
extern int XSetFont(
    Display*		,
    GC			,
    Font		
);
extern int XSetFontPath(
    Display*		,
    char**		,
    int			
);
extern int XSetForeground(
    Display*		,
    GC			,
    unsigned long	
);
extern int XSetFunction(
    Display*		,
    GC			,
    int			
);
extern int XSetGraphicsExposures(
    Display*		,
    GC			,
    Bool		
);
extern int XSetIconName(
    Display*		,
    Window		,
     char*	
);
extern int XSetInputFocus(
    Display*		,
    Window		,
    int			,
    Time		
);
extern int XSetLineAttributes(
    Display*		,
    GC			,
    unsigned int	,
    int			,
    int			,
    int			
);
extern int XSetModifierMapping(
    Display*		,
    XModifierKeymap*	
);
extern int XSetPlaneMask(
    Display*		,
    GC			,
    unsigned long	
);
extern int XSetPointerMapping(
    Display*		,
     unsigned char*	,
    int			
);
extern int XSetScreenSaver(
    Display*		,
    int			,
    int			,
    int			,
    int			
);
extern int XSetSelectionOwner(
    Display*		,
    Atom	        ,
    Window		,
    Time		
);
extern int XSetState(
    Display*		,
    GC			,
    unsigned long 	,
    unsigned long	,
    int			,
    unsigned long	
);
extern int XSetStipple(
    Display*		,
    GC			,
    Pixmap		
);
extern int XSetSubwindowMode(
    Display*		,
    GC			,
    int			
);
extern int XSetTSOrigin(
    Display*		,
    GC			,
    int			,
    int			
);
extern int XSetTile(
    Display*		,
    GC			,
    Pixmap		
);
extern int XSetWindowBackground(
    Display*		,
    Window		,
    unsigned long	
);
extern int XSetWindowBackgroundPixmap(
    Display*		,
    Window		,
    Pixmap		
);
extern int XSetWindowBorder(
    Display*		,
    Window		,
    unsigned long	
);
extern int XSetWindowBorderPixmap(
    Display*		,
    Window		,
    Pixmap		
);
extern int XSetWindowBorderWidth(
    Display*		,
    Window		,
    unsigned int	
);
extern int XSetWindowColormap(
    Display*		,
    Window		,
    Colormap		
);
extern int XStoreBuffer(
    Display*		,
     char*	,
    int			,
    int			
);
extern int XStoreBytes(
    Display*		,
     char*	,
    int			
);
extern int XStoreColor(
    Display*		,
    Colormap		,
    XColor*		
);
extern int XStoreColors(
    Display*		,
    Colormap		,
    XColor*		,
    int			
);
extern int XStoreName(
    Display*		,
    Window		,
     char*	
);
extern int XStoreNamedColor(
    Display*		,
    Colormap		,
     char*	,
    unsigned long	,
    int			
);
extern int XSync(
    Display*		,
    Bool		
);