Motif_Athena_Package/include_C/Xlib.pp

function XPutBackEvent(para1:PDisplay; para2:PXEvent):longint;cdecl;external;
{ display  }{ d  }{ gc  }{ image  }{ src_x  }{ src_y  }{ dest_x  }{ dest_y  }{ width  }{ height  }
function XPutImage(para1:PDisplay; para2:TDrawable; para3:TGC; para4:PXImage; para5:longint; 
           para6:longint; para7:longint; para8:longint; para9:dword; para10:dword):longint;cdecl;external;
{ display  }
function XQLength(para1:PDisplay):longint;cdecl;external;
{ display  }{ d  }{ width  }{ height  }{ width_return  }{ height_return  }
function XQueryBestCursor(para1:PDisplay; para2:TDrawable; para3:dword; para4:dword; para5:Pdword; 
           para6:Pdword):TStatus;cdecl;external;
{ display  }{ class  }{ which_screen  }{ width  }{ height  }{ width_return  }{ height_return  }
function XQueryBestSize(para1:PDisplay; para2:longint; para3:TDrawable; para4:dword; para5:dword; 
           para6:Pdword; para7:Pdword):TStatus;cdecl;external;
{ display  }{ which_screen  }{ width  }{ height  }{ width_return  }{ height_return  }
function XQueryBestStipple(para1:PDisplay; para2:TDrawable; para3:dword; para4:dword; para5:Pdword; 
           para6:Pdword):TStatus;cdecl;external;
{ display  }{ which_screen  }{ width  }{ height  }{ width_return  }{ height_return  }
function XQueryBestTile(para1:PDisplay; para2:TDrawable; para3:dword; para4:dword; para5:Pdword; 
           para6:Pdword):TStatus;cdecl;external;
{ display  }{ colormap  }{ def_in_out  }
function XQueryColor(para1:PDisplay; para2:TColormap; para3:PXColor):longint;cdecl;external;
{ display  }{ colormap  }{ defs_in_out  }{ ncolors  }
function XQueryColors(para1:PDisplay; para2:TColormap; para3:PXColor; para4:longint):longint;cdecl;external;
{ display  }{ name  }{ major_opcode_return  }{ first_event_return  }{ first_error_return  }
function XQueryExtension(para1:PDisplay; para2:Pchar; para3:Plongint; para4:Plongint; para5:Plongint):TBool;cdecl;external;
{ display  }{ keys_return  }
function XQueryKeymap(para1:PDisplay; para2:array[0..31] of char):longint;cdecl;external;
{ display  }{ w  }{ root_return  }{ child_return  }{ root_x_return  }{ root_y_return  }{ win_x_return  }{ win_y_return  }{ mask_return  }
function XQueryPointer(para1:PDisplay; para2:TWindow; para3:PWindow; para4:PWindow; para5:Plongint; 
           para6:Plongint; para7:Plongint; para8:Plongint; para9:Pdword):TBool;cdecl;external;
{ display  }{ font_ID  }{ string  }{ nchars  }{ direction_return  }{ font_ascent_return  }{ font_descent_return  }{ overall_return  }
function XQueryTextExtents(para1:PDisplay; para2:TXID; para3:Pchar; para4:longint; para5:Plongint; 
           para6:Plongint; para7:Plongint; para8:PXCharStruct):longint;cdecl;external;
{ display  }{ font_ID  }{ string  }{ nchars  }{ direction_return  }{ font_ascent_return  }{ font_descent_return  }{ overall_return  }
function XQueryTextExtents16(para1:PDisplay; para2:TXID; para3:PXChar2b; para4:longint; para5:Plongint; 
           para6:Plongint; para7:Plongint; para8:PXCharStruct):longint;cdecl;external;
{ display  }{ w  }{ root_return  }{ parent_return  }{ children_return  }{ nchildren_return  }
function XQueryTree(para1:PDisplay; para2:TWindow; para3:PWindow; para4:PWindow; para5:PPWindow; 
           para6:Pdword):TStatus;cdecl;external;
{ display  }{ w  }
function XRaiseWindow(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }{ d  }{ filename  }{ width_return  }{ height_return  }{ bitmap_return  }{ x_hot_return  }{ y_hot_return  }
function XReadBitmapFile(para1:PDisplay; para2:TDrawable; para3:Pchar; para4:Pdword; para5:Pdword; 
           para6:PPixmap; para7:Plongint; para8:Plongint):longint;cdecl;external;
{ filename  }{ width_return  }{ height_return  }{ data_return  }{ x_hot_return  }{ y_hot_return  }
function XReadBitmapFileData(para1:Pchar; para2:Pdword; para3:Pdword; para4:PPbyte; para5:Plongint; 
           para6:Plongint):longint;cdecl;external;
{ display  }{ keysym  }{ list  }{ mod_count  }{ string  }{ bytes_string  }
function XRebindKeysym(para1:PDisplay; para2:TKeySym; para3:PKeySym; para4:longint; para5:Pbyte; 
           para6:longint):longint;cdecl;external;
{ display  }{ cursor  }{ foreground_color  }{ background_color  }
function XRecolorCursor(para1:PDisplay; para2:TCursor; para3:PXColor; para4:PXColor):longint;cdecl;external;
{ event_map  }
function XRefreshKeyboardMapping(para1:PXMappingEvent):longint;cdecl;external;
{ display  }{ w  }
function XRemoveFromSaveSet(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }{ host  }
function XRemoveHost(para1:PDisplay; para2:PXHostAddress):longint;cdecl;external;
{ display  }{ hosts  }{ num_hosts  }
function XRemoveHosts(para1:PDisplay; para2:PXHostAddress; para3:longint):longint;cdecl;external;
{ display  }{ w  }{ parent  }{ x  }{ y  }
function XReparentWindow(para1:PDisplay; para2:TWindow; para3:TWindow; para4:longint; para5:longint):longint;cdecl;external;
{ display  }
function XResetScreenSaver(para1:PDisplay):longint;cdecl;external;
{ display  }{ w  }{ width  }{ height  }
function XResizeWindow(para1:PDisplay; para2:TWindow; para3:dword; para4:dword):longint;cdecl;external;
{ display  }{ windows  }{ nwindows  }
function XRestackWindows(para1:PDisplay; para2:PWindow; para3:longint):longint;cdecl;external;
{ display  }{ rotate  }
function XRotateBuffers(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }{ w  }{ properties  }{ num_prop  }{ npositions  }
function XRotateWindowProperties(para1:PDisplay; para2:TWindow; para3:PAtom; para4:longint; para5:longint):longint;cdecl;external;
{ display  }
function XScreenCount(para1:PDisplay):longint;cdecl;external;
{ display  }{ w  }{ event_mask  }
function XSelectInput(para1:PDisplay; para2:TWindow; para3:longint):longint;cdecl;external;
{ display  }{ w  }{ propagate  }{ event_mask  }{ event_send  }
function XSendEvent(para1:PDisplay; para2:TWindow; para3:TBool; para4:longint; para5:PXEvent):TStatus;cdecl;external;
{ display  }{ mode  }
function XSetAccessControl(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }{ gc  }{ arc_mode  }
function XSetArcMode(para1:PDisplay; para2:TGC; para3:longint):longint;cdecl;external;
{ display  }{ gc  }{ background  }
function XSetBackground(para1:PDisplay; para2:TGC; para3:dword):longint;cdecl;external;
{ display  }{ gc  }{ pixmap  }
function XSetClipMask(para1:PDisplay; para2:TGC; para3:TPixmap):longint;cdecl;external;
{ display  }{ gc  }{ clip_x_origin  }{ clip_y_origin  }
function XSetClipOrigin(para1:PDisplay; para2:TGC; para3:longint; para4:longint):longint;cdecl;external;
{ display  }{ gc  }{ clip_x_origin  }{ clip_y_origin  }{ rectangles  }{ n  }{ ordering  }
function XSetClipRectangles(para1:PDisplay; para2:TGC; para3:longint; para4:longint; para5:PXRectangle; 
           para6:longint; para7:longint):longint;cdecl;external;
{ display  }{ close_mode  }
function XSetCloseDownMode(para1:PDisplay; para2:longint):longint;cdecl;external;
{ display  }{ w  }{ argv  }{ argc  }
function XSetCommand(para1:PDisplay; para2:TWindow; para3:PPchar; para4:longint):longint;cdecl;external;
{ display  }{ gc  }{ dash_offset  }{ dash_list  }{ n  }
function XSetDashes(para1:PDisplay; para2:TGC; para3:longint; para4:Pchar; para5:longint):longint;cdecl;external;
{ display  }{ gc  }{ fill_rule  }
function XSetFillRule(para1:PDisplay; para2:TGC; para3:longint):longint;cdecl;external;
{ display  }{ gc  }{ fill_style  }
function XSetFillStyle(para1:PDisplay; para2:TGC; para3:longint):longint;cdecl;external;
{ display  }{ gc  }{ font  }
function XSetFont(para1:PDisplay; para2:TGC; para3:TFont):longint;cdecl;external;
{ display  }{ directories  }{ ndirs  }
function XSetFontPath(para1:PDisplay; para2:PPchar; para3:longint):longint;cdecl;external;
{ display  }{ gc  }{ foreground  }
function XSetForeground(para1:PDisplay; para2:TGC; para3:dword):longint;cdecl;external;
{ display  }{ gc  }{ function  }
function XSetFunction(para1:PDisplay; para2:TGC; para3:longint):longint;cdecl;external;
{ display  }{ gc  }{ graphics_exposures  }
function XSetGraphicsExposures(para1:PDisplay; para2:TGC; para3:TBool):longint;cdecl;external;
{ display  }{ w  }{ icon_name  }
function XSetIconName(para1:PDisplay; para2:TWindow; para3:Pchar):longint;cdecl;external;
{ display  }{ focus  }{ revert_to  }{ time  }
function XSetInputFocus(para1:PDisplay; para2:TWindow; para3:longint; para4:TTime):longint;cdecl;external;
{ display  }{ gc  }{ line_width  }{ line_style  }{ cap_style  }{ join_style  }
function XSetLineAttributes(para1:PDisplay; para2:TGC; para3:dword; para4:longint; para5:longint; 
           para6:longint):longint;cdecl;external;
{ display  }{ modmap  }
function XSetModifierMapping(para1:PDisplay; para2:PXModifierKeymap):longint;cdecl;external;
{ display  }{ gc  }{ plane_mask  }
function XSetPlaneMask(para1:PDisplay; para2:TGC; para3:dword):longint;cdecl;external;
{ display  }{ map  }{ nmap  }
function XSetPointerMapping(para1:PDisplay; para2:Pbyte; para3:longint):longint;cdecl;external;
{ display  }{ timeout  }{ interval  }{ prefer_blanking  }{ allow_exposures  }
function XSetScreenSaver(para1:PDisplay; para2:longint; para3:longint; para4:longint; para5:longint):longint;cdecl;external;
{ display  }{ selection  }{ owner  }{ time  }
function XSetSelectionOwner(para1:PDisplay; para2:TAtom; para3:TWindow; para4:TTime):longint;cdecl;external;
{ display  }{ gc  }{ foreground  }{ background  }{ function  }{ plane_mask  }
function XSetState(para1:PDisplay; para2:TGC; para3:dword; para4:dword; para5:longint; 
           para6:dword):longint;cdecl;external;
{ display  }{ gc  }{ stipple  }
function XSetStipple(para1:PDisplay; para2:TGC; para3:TPixmap):longint;cdecl;external;
{ display  }{ gc  }{ subwindow_mode  }
function XSetSubwindowMode(para1:PDisplay; para2:TGC; para3:longint):longint;cdecl;external;
{ display  }{ gc  }{ ts_x_origin  }{ ts_y_origin  }
function XSetTSOrigin(para1:PDisplay; para2:TGC; para3:longint; para4:longint):longint;cdecl;external;
{ display  }{ gc  }{ tile  }
function XSetTile(para1:PDisplay; para2:TGC; para3:TPixmap):longint;cdecl;external;
{ display  }{ w  }{ background_pixel  }
function XSetWindowBackground(para1:PDisplay; para2:TWindow; para3:dword):longint;cdecl;external;
{ display  }{ w  }{ background_pixmap  }
function XSetWindowBackgroundPixmap(para1:PDisplay; para2:TWindow; para3:TPixmap):longint;cdecl;external;
{ display  }{ w  }{ border_pixel  }
function XSetWindowBorder(para1:PDisplay; para2:TWindow; para3:dword):longint;cdecl;external;
{ display  }{ w  }{ border_pixmap  }
function XSetWindowBorderPixmap(para1:PDisplay; para2:TWindow; para3:TPixmap):longint;cdecl;external;
{ display  }{ w  }{ width  }
function XSetWindowBorderWidth(para1:PDisplay; para2:TWindow; para3:dword):longint;cdecl;external;
{ display  }{ w  }{ colormap  }
function XSetWindowColormap(para1:PDisplay; para2:TWindow; para3:TColormap):longint;cdecl;external;
{ display  }{ bytes  }{ nbytes  }{ buffer  }
function XStoreBuffer(para1:PDisplay; para2:Pchar; para3:longint; para4:longint):longint;cdecl;external;
{ display  }{ bytes  }{ nbytes  }
function XStoreBytes(para1:PDisplay; para2:Pchar; para3:longint):longint;cdecl;external;
{ display  }{ colormap  }{ color  }
function XStoreColor(para1:PDisplay; para2:TColormap; para3:PXColor):longint;cdecl;external;
{ display  }{ colormap  }{ color  }{ ncolors  }
function XStoreColors(para1:PDisplay; para2:TColormap; para3:PXColor; para4:longint):longint;cdecl;external;
{ display  }{ w  }{ window_name  }
function XStoreName(para1:PDisplay; para2:TWindow; para3:Pchar):longint;cdecl;external;
{ display  }{ colormap  }{ color  }{ pixel  }{ flags  }
function XStoreNamedColor(para1:PDisplay; para2:TColormap; para3:Pchar; para4:dword; para5:longint):longint;cdecl;external;
{ display  }{ discard  }
function XSync(para1:PDisplay; para2:TBool):longint;cdecl;external;
{ font_struct  }{ string  }{ nchars  }{ direction_return  }{ font_ascent_return  }{ font_descent_return  }{ overall_return  }
